RESOLVED FIXED232003
REGRESSION (r284418): [iOS] TestWebKitAPI.HSTS.Basic, TestWebKitAPI.HSTS.CrossOriginRedirect, TestWebKitAPI.HSTS.ThirdParty, and TestWebKitAPI.WebKit.RedirectToPlaintextHTTPSUpgrade timing out
https://bugs.webkit.org/show_bug.cgi?id=232003
Summary REGRESSION (r284418): [iOS] TestWebKitAPI.HSTS.Basic, TestWebKitAPI.HSTS.Cros...
Ryan Haddad
Reported 2021-10-19 23:08:26 PDT
Attachments
Patch (10.22 KB, patch)
2021-10-20 10:38 PDT, Alex Christensen
cdumez: review+
Radar WebKit Bug Importer
Comment 1 2021-10-19 23:08:44 PDT
Ryan Haddad
Comment 2 2021-10-19 23:09:22 PDT
Alex Christensen
Comment 3 2021-10-20 09:34:32 PDT
r284539 disabled the tests.
Alex Christensen
Comment 4 2021-10-20 09:34:51 PDT
Reopening because I didn't actually fix anything.
Alex Christensen
Comment 5 2021-10-20 09:37:15 PDT
r284540 fixed the iOS build... sorry
Alex Christensen
Comment 6 2021-10-20 10:38:52 PDT
Alex Christensen
Comment 7 2021-10-20 11:51:40 PDT
Alex Christensen
Comment 8 2021-10-20 18:28:24 PDT
*** Bug 231396 has been marked as a duplicate of this bug. ***
Alex Christensen
Comment 9 2021-10-20 18:30:24 PDT
*** Bug 231366 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.