Tools/TestWebKitAPI/Tests/WebKitCocoa/HSTS.mm
@@ -58,8 +58,6 @@ std::pair<RetainPtr<WKWebView>, RetainPtr<TestNavigationDelegate>> hstsWebViewAn
     return { WTFMove(webView), WTFMove(delegate) };
 }
 
-// FIXME: https://bugs.webkit.org/show_bug.cgi?id=232003 Make this test stop timing out on iOS.
-#if PLATFORM(MAC)
 static HTTPServer hstsServer()
 {
     return HTTPServer({{ "/", {{{"Strict-Transport-Security" , "max-age=31536000"}}, "" }}}, HTTPServer::Protocol::HttpsProxy);
@@ -140,7 +138,6 @@ TEST(HSTS, CrossOriginRedirect)
     EXPECT_WK_STREQ(webView.get().URL.absoluteString, "https://example.com/");
     EXPECT_EQ(httpServer.totalRequests(), 1u);
 }
-#endif // PLATFORM(MAC)
 
 #endif // HAVE(CFNETWORK_NSURLSESSION_HSTS_WITH_UNTRUSTED_ROOT)
 
